redisign_messages_css

--- a/client/index.html
+++ b/client/index.html
@@ -62,7 +62,8 @@
                     <div id="contacts-container">
                         <div class="input-container">
                             <div id="contacts-container-input-div">
-                                <img id="contacts-container-input-img" src="./assets/Search_Magnifying_Glass.svg" alt="" id="search-img">
+                                <img id="contacts-container-input-img" src="./assets/Search_Magnifying_Glass.svg" alt=""
+                                    id="search-img">
                                 <input type="text" name="" id="contacts-container-input" placeholder="Search">
                             </div>
                         </div>
@@ -97,7 +98,18 @@
                         </div>
 
                         <ul id="chat-display">
-
+                            <li class="audio-container  ">
+                                <span class="message-name">Anonimus</span>
+                                <div class="audio-message">
+                                    <button class="play-pause-btn">
+                                        <img src="./assets/play.svg" alt="">
+                                    </button>
+                                    <div class="progress-bar">
+                                        <div class="progress"></div>
+                                    </div>
+                                    <span class="duration">00:15</span>
+                                </div>
+                            </li>
                         </ul>
 
                         <div class="app-chat-input">
