second-app-version

--- a/client/index.html
+++ b/client/index.html
@@ -103,7 +103,7 @@
 
                         <div class="app-chat-input">
                             <form id="chat-form" action="">
-                                <input type="text" name="" id="send-msg" placeholder="You're message">
+                                <input type="text" name="" id="send-msg" placeholder="Your message">
                                 <button type="button" id="voice-message-btn">
                                     <img src="./assets/mic.svg" alt=""></button>
 
